--- a/Nez.Portable/project.json
+++ b/Nez.Portable/project.json
@@ -1,5 +1,6 @@
-{
+﻿{
   "dependencies": {
+    "MonoGame.Framework.DesktopGL": "3.7.1.189"
   },
   "frameworks": {
     ".NETPortable,Version=v4.5,Profile=Profile111": {}
